# python-gitlab

./: .commitlintrc.json  .dockerignore  .env  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  .renovaterc.json  .testr.conf  .travis.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  COPYING  ChangeLog  ChangeLog.rst  Dockerfile  MANIFEST.in  README.md  README.rst  RELEASE_NOTES.rst  SECURITY.md  TODO  codecov.yml  docker-entrypoint.sh  docker-requirements.txt  gitlab  gitlab.py  pyproject.toml  requirements-docker.txt  requirements-docs.txt  requirements-lint.txt  requirements-precommit.txt  requirements-test.txt  requirements.txt  rtd-requirements.txt  setup.cfg  (+3 more)
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  lint.yml  lock.yml  main.yml  pre_commit.yml  release.yml  rerun-test.yml  stale.yml  test.yml
contrib/docker/: Dockerfile  README.rst  python-gitlab.cfg
debian/: changelog  control  copyright  docs  rules  watch
docs/: Makefile  api-levels.rst  api-objects.rst  api-usage-advanced.rst  api-usage-graphql.rst  api-usage.rst  changelog.rst  cli-examples.rst  cli-objects.rst  cli-usage.rst  cli.rst  conf.py  faq.rst  graphql-api-usage.rst  index.rst  install.rst  make.bat  release-notes.rst  switching-to-v4.rst  upgrade-from-0.10.rst  usage.rst
docs/_static/js/: gitter.js
docs/_templates/: breadcrumbs.html
docs/api/: gitlab.rst  gitlab.v3.rst  gitlab.v4.rst  modules.rst
docs/contributor/: contributing.rst  dev-quickstart.rst  index.rst
docs/ext/: docstrings.py  gl_tmpl.j2  manager_tmpl.j2  object_tmpl.j2  template.j2
docs/gl_objects/: access_requests.py  access_requests.rst  appearance.rst  applications.rst  badges.rst  boards.rst  branches.py  branches.rst  builds.py  builds.rst  bulk_imports.rst  ci_lint.rst  cluster_agents.rst  clusters.rst  commits.py  commits.rst  deploy_keys.py  deploy_keys.rst  deploy_tokens.rst  deployments.py  deployments.rst  dicussions.rst  discussions.rst  draft_notes.rst  emojis.rst  environments.py  environments.rst  epics.rst  events.rst  features.rst  geo_nodes.rst  gitlab_features.rst  group_access_tokens.rst  groups.py  groups.rst  invitations.rst  issues.py  issues.rst  iterations.rst  job_token_scope.rst  (+64 more)
gitlab/: __init__.py  __main__.py  __version__.py  _logging.py  _version.py  base.py  cli.py  client.py  config.py  const.py  exceptions.py  mixins.py  oauth.py  objects.py  types.py  utils.py
gitlab/_backends/: __init__.py  graphql.py  protocol.py  requests_backend.py
gitlab/graphql/: transport.py
gitlab/http_backends/: __init__.py  requests_backend.py
gitlab/http_clients/: _httpx_client.py  _request_sclient.py
gitlab/testing/: plugin.py
gitlab/testing/docker/: .env  create_license.rb  docker-compose.yml  docker.py  install_docker.sh  set_token.rb
gitlab/testing/fixtures/: gitlab.py  helpers.py  meta.py
gitlab/tests/: conftest.py  test_async_gitlab.py  test_async_mixins.py  test_base.py  test_cli.py  test_config.py  test_exceptions.py  test_gitlab.py  test_gitlab_auth.py  test_gitlab_http_methods.py  test_gitlabobject.py  test_manager.py  test_mixins.py  test_project_variable_api.py  test_types.py  test_utils.py
gitlab/tests/mixins/: test_meta_mixins.py  test_mixin_methods.py  test_object_mixins_attributes.py
gitlab/tests/objects/: mocks.py  test_appearance.py  test_application.py  test_applications.py  test_async_application.py  test_async_projects.py  test_audit_events.py  test_badges.py  test_bridges.py  test_commits.py  test_deploy_tokens.py  test_deployments.py  test_environments.py  test_groups.py  test_hooks.py  test_issues.py  test_job_artifacts.py  test_jobs.py  test_members.py  test_mro.py  test_packages.py  test_personal_access_tokens.py  test_pipeline_schedules.py  test_pipelines.py  test_project_access_tokens.py  test_project_import_export.py  test_project_merge_request_approvals.py  test_project_statistics.py  test_projects.py  test_remote_mirrors.py  test_repositories.py  test_resource_label_events.py  test_resource_milestone_events.py  test_resource_state_events.py  test_runners.py  test_services.py  test_snippets.py  test_submodules.py  test_todos.py  test_users.py  (+1 more)
gitlab/v3/: cli.py  objects.py
gitlab/v4/: __init__.py  cli.py  objects.py
gitlab/v4/objects/: __init__.py  access_requests.py  appearance.py  application.py  applications.py  artifacts.py  audit_events.py  award_emojis.py  badges.py  boards.py  branches.py  broadcast_message.py  broadcast_messages.py  bulk_imports.py  ci_lint.py  cluster_agents.py  clusters.py  commits.py  container_registry.py  current_user.py  custom_attributes.py  deploy_key.py  deploy_keys.py  deploy_tokens.py  deployments.py  discussions.py  draft_notes.py  ee.py  environments.py  epics.py  event.py  events.py  export_import.py  feature.py  feature_flag_user_lists.py  feature_flags.py  features.py  (+66 more)
test/: test_gitlabobject.py
tests/: README.md  conftest.py  main.py
tests/ci_tools/: setup-dummy-config.sh
tests/functional/: conftest.py  ee-test.py  helpers.py  test_api_v4.py  test_cli_v4.sh  test_ee.py
tests/install/: test_install.py
tests/meta/: test_dists.py  test_ensure_type_hints.py  test_mro.py  test_v4_objects_imported.py
tests/smoke/: test_dists.py
tests/unit/: conftest.py  helpers.py  test__logging.py  test__main__.py  test_backends.py  test_base.py  test_cli.py  test_config.py  test_const.py  test_exceptions.py  test_gitlab.py  test_gitlab_auth.py  test_gitlab_http_methods.py  test_graphql.py  test_oauth.py  test_pytest_plugin.py  test_retry.py  test_types.py  test_utils.py
tools/: Dockerfile-test  build_test_env.sh  cli_test_v3.sh  cli_test_v4.sh  ee-test.py  functional_tests.sh  generate_token.py  py_functional_tests.sh  python_async_test_v4.py  python_test.py  python_test_v3.py  python_test_v4.py  python_test_v4_async.py  reset_gitlab.py
tools/functional/: conftest.py  ee-test.py  python_test_v4.py  test_cli_v4.py
(+153 files in other folders)
